--- a/grupo03/pom.xml
+++ b/grupo03/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.4.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.unla</groupId>
+			<artifactId>ghsicilianotfi</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
